[gd_scene load_steps=6 format=3 uid="uid://do45yglin4dbq"]

[ext_resource type="Script" uid="uid://crdvo5x2wgyep" path="res://cs/卡牌系统/视图/CardView.gd" id="1_jk6ts"]
[ext_resource type="Texture2D" uid="uid://ca3pbuhthj5ea" path="res://assets/images/pokers/1.jpg" id="2_wd3un"]
[ext_resource type="Shader" uid="uid://cg1ht1pmwjot" path="res://assets/images/card_reinforcements/glass_material.gdshader" id="3_eykg6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h8j2d"]
bg_color = Color(0.941176, 0.8, 0.254902, 0.501961)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 0.843137, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(1, 0.843137, 0, 0.301961)
shadow_size = 5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k6h2o"]
shader = ExtResource("3_eykg6")
shader_parameter/transparency = 0.7
shader_parameter/refraction = 0.05

[node name="Card" type="Control"]
custom_minimum_size = Vector2(120, 180)
layout_mode = 3
anchors_preset = 0
offset_right = 120.0
offset_bottom = 180.0
script = ExtResource("1_jk6ts")

[node name="Highlight" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_h8j2d")

[node name="CardBack" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_wd3un")
expand_mode = 1

[node name="CardFront" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_wd3un")
expand_mode = 1



[node name="PowerLabel" type="Label" parent="CardFront"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -30.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = 30.0
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 0.8, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 16
text = "14"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="ReinforcementEffects" type="Node2D" parent="."]
position = Vector2(67.5, 90)

[node name="Frame" type="Sprite2D" parent="ReinforcementEffects"]
visible = false
scale = Vector2(0.5, 0.5)

[node name="WaxSeals" type="Node2D" parent="ReinforcementEffects"]

[node name="Material" type="ColorRect" parent="ReinforcementEffects"]
visible = false
material = SubResource("ShaderMaterial_k6h2o")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -67.5
offset_top = -90.0
offset_right = 67.5
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
